K8s/MongoDB/default-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: mongo-express
  ports:
  - port: 80
    targetPort: 8081
